Fix gaps when filtering in hide mode
Close #246
Patch by @lefunque

--- a/src/skin-common.less
+++ b/src/skin-common.less
@@ -110,7 +110,7 @@ ul.fancytree-container {
 		background-image: none;  // no v-lines
 
 		margin: 0;
-		padding: 1px 0 0 0;
+//		padding: 1px 0 0 0; // issue #246
 	}
 	// Suppress lines for last child node
 	li.fancytree-lastsib {
@@ -529,7 +529,7 @@ table.fancytree-ext-columnview {
 				background-image: none;  /* no v-lines */
 
 				margin: 0;
-				padding: 1px 0 0 0;
+//				padding: 1px 0 0 0;  // issue #246
 			}
 		}
 	}
